src/scss/src/scss/lib/ScssParser.java
// Generated from C:/Users/anaig/OneDrive/Documents/Prog/IUT/S5/compilation/antlr/src/scss/src/ScssParser.g4 by ANTLR 4.13.2
package scss.src.scss.lib;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.tree.*;

import java.util.List;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class ScssParser extends Parser {
    static {
        RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION);
    }

    protected static final DFA[] _decisionToDFA;
    protected static final PredictionContextCache _sharedContextCache =
            new PredictionContextCache();
    public static final int
            Comment = 1, MultiLineComment = 2, LineComment = 3, Space = 4, Uri = 5, Format = 6,
            AbsLength = 7, FontRelative = 8, ViewportRelative = 9, Angle = 10, Resolution = 11,
            Freq = 12, Time = 13, Percentage = 14, Import = 15, Include = 16, Use = 17, Require = 18,
            Charset = 19, Mixin = 20, Function = 21, FontFace = 22, Forward = 23, Content = 24,
            Keyframes = 25, Return = 26, Media = 27, Extend = 28, Warn = 29, Error = 30, If = 31,
            AtIf = 32, AtFor = 33, AtElse = 34, AtWhile = 35, AtEach = 36, From = 37, To = 38, Through = 39,
            Only = 40, Not = 41, And = 42, Using = 43, As = 44, With = 45, Or = 46, In = 47, Default = 48,
            Important = 49, Lparen = 50, Rparen = 51, Lbrack = 52, Rbrack = 53, BlockStart = 54,
            BlockEnd = 55, Dot = 56, Comma = 57, Colon = 58, Semi = 59, Tilde = 60, Under = 61,
            Dollar = 62, At = 63, Amp = 64, Hash = 65, True = 66, False = 67, Plus = 68, Div = 69,
            Minus = 70, Times = 71, Eq = 72, NotEq = 73, Greater = 74, Less = 75, Includes = 76,
            DashMatch = 77, Pipe = 78, Cdo = 79, Cdc = 80, PseudoNot = 81, Calc = 82, Rotate = 83,
            Var = 84, Rgba = 85, Repeat = 86, PrefixMatch = 87, SuffixMatch = 88, SubstringMatch = 89,
            VendorPrefix = 90, Variable = 91, Number = 92, String_ = 93, Ident = 94;
    public static final int
            RULE_stylesheet = 0, RULE_statement = 1, RULE_importDeclaration = 2, RULE_importPath = 3,
            RULE_asClause = 4, RULE_withClause = 5, RULE_variableDeclaration = 6,
            RULE_variableValue = 7, RULE_variableName = 8, RULE_namespace_ = 9, RULE_propertyDeclaration = 10,
            RULE_prio = 11, RULE_propertyValue = 12, RULE_mediaDeclaration = 13, RULE_mediaQueryList = 14,
            RULE_mediaQuery = 15, RULE_mediaExpression = 16, RULE_mixinDeclaration = 17,
            RULE_contentDeclaration = 18, RULE_fontFaceDeclaration = 19, RULE_keyframesDeclaration = 20,
            RULE_keyframesBlock = 21, RULE_percentageStatement = 22, RULE_includeDeclaration = 23,
            RULE_interpolationDeclaration = 24, RULE_extendDeclaration = 25, RULE_warndingDeclaration = 26,
            RULE_errorDeclaration = 27, RULE_atStatementDeclaration = 28, RULE_ruleset = 29,
            RULE_block = 30, RULE_selectorGroup = 31, RULE_selector = 32, RULE_combinator = 33,
            RULE_selectorSequence = 34, RULE_id = 35, RULE_typeSelector = 36, RULE_typeNamespacePrefix = 37,
            RULE_universal = 38, RULE_className = 39, RULE_interpolation = 40, RULE_parentRef = 41,
            RULE_attrib = 42, RULE_pseudo = 43, RULE_functionalPseudo = 44, RULE_pseudoParameter = 45,
            RULE_negation = 46, RULE_negationArg = 47, RULE_operator_ = 48, RULE_value = 49,
            RULE_functionDeclaration = 50, RULE_parameters = 51, RULE_parameter = 52,
            RULE_functionBody = 53, RULE_functionReturn = 54, RULE_functionStatement = 55,
            RULE_functionCall = 56, RULE_expression = 57, RULE_expressionPart = 58,
            RULE_ifExpression = 59, RULE_listDeclaration = 60, RULE_listCommaSeparated = 61,
            RULE_listSpaceSeparated = 62, RULE_listBracketed = 63, RULE_listElement = 64,
            RULE_mapDeclaration = 65, RULE_mapEntries = 66, RULE_mapEntry = 67, RULE_mapKey = 68,
            RULE_mapValue = 69, RULE_ifDeclaration = 70, RULE_elseIfStatement = 71,
            RULE_elseStatement = 72, RULE_forDeclaration = 73, RULE_through = 74,
            RULE_whileDeclaration = 75, RULE_eachDeclaration = 76, RULE_eachValueList = 77,
            RULE_var_ = 78, RULE_calc = 79, RULE_rotate = 80, RULE_rgba = 81, RULE_repeat = 82,
            RULE_unit = 83, RULE_length = 84, RULE_dimension = 85, RULE_percentage = 86,
            RULE_degree = 87, RULE_measurment = 88, RULE_uri = 89, RULE_arglist = 90,
            RULE_plusMinus = 91, RULE_hexcolor = 92, RULE_color = 93, RULE_boolean = 94,
            RULE_number = 95, RULE_identifier = 96;

    private static String[] makeRuleNames() {
        return new String[]{
                "stylesheet", "statement", "importDeclaration", "importPath", "asClause",
                "withClause", "variableDeclaration", "variableValue", "variableName",
                "namespace_", "propertyDeclaration", "prio", "propertyValue", "mediaDeclaration",
                "mediaQueryList", "mediaQuery", "mediaExpression", "mixinDeclaration",
                "contentDeclaration", "fontFaceDeclaration", "keyframesDeclaration",
                "keyframesBlock", "percentageStatement", "includeDeclaration", "interpolationDeclaration",
                "extendDeclaration", "warndingDeclaration", "errorDeclaration", "atStatementDeclaration",
                "ruleset", "block", "selectorGroup", "selector", "combinator", "selectorSequence",
                "id", "typeSelector", "typeNamespacePrefix", "universal", "className",
                "interpolation", "parentRef", "attrib", "pseudo", "functionalPseudo",
                "pseudoParameter", "negation", "negationArg", "operator_", "value", "functionDeclaration",
                "parameters", "parameter", "functionBody", "functionReturn", "functionStatement",
                "functionCall", "expression", "expressionPart", "ifExpression", "listDeclaration",
                "listCommaSeparated", "listSpaceSeparated", "listBracketed", "listElement",
                "mapDeclaration", "mapEntries", "mapEntry", "mapKey", "mapValue", "ifDeclaration",
                "elseIfStatement", "elseStatement", "forDeclaration", "through", "whileDeclaration",
                "eachDeclaration", "eachValueList", "var_", "calc", "rotate", "rgba",
                "repeat", "unit", "length", "dimension", "percentage", "degree", "measurment",
                "uri", "arglist", "plusMinus", "hexcolor", "color", "boolean", "number",
                "identifier"
        };
    }

    public static final String[] ruleNames = makeRuleNames();

    private static String[] makeLiteralNames() {
        return new String[]{
                null, null, null, null, null, null, null, null, null, null, null, null,
                null, null, "'%'", "'@import'", "'@include'", "'@use'", "'@require'",
                "'@charset '", "'@mixin'", "'@function'", "'@font-face'", "'@forward'",
                "'@content'", "'@keyframes'", "'@return'", "'@media'", "'@extend'", "'@warn'",
                "'@error'", "'if'", "'@if'", "'@for'", "'@else'", "'@while'", "'@each'",
                "'from'", "'to'", "'through'", "'only'", "'not'", "'and'", "'using'",
                "'as'", "'with'", "'or'", "'in'", "'!default'", "'!important'", "'('",
                "')'", "'['", "']'", "'{'", "'}'", "'.'", "','", "':'", "';'", "'~'",
                "'_'", "'$'", "'@'", "'&'", "'#'", "'true'", "'false'", "'+'", "'/'",
                "'-'", "'*'", "'='", "'!='", "'>'", "'<'", "'~='", "'|='", "'|'", "'<!--'",
                "'-->'", "':not('", "'calc('", "'rotate('", "'var('", "'rgba('", "'repeat('",
                "'^='", "'$='", "'*='"
        };
    }

    private static final String[] _LITERAL_NAMES = makeLiteralNames();

    private static String[] makeSymbolicNames() {
        return new String[]{
                null, "Comment", "MultiLineComment", "LineComment", "Space", "Uri", "Format",
                "AbsLength", "FontRelative", "ViewportRelative", "Angle", "Resolution",
                "Freq", "Time", "Percentage", "Import", "Include", "Use", "Require",
                "Charset", "Mixin", "Function", "FontFace", "Forward", "Content", "Keyframes",
                "Return", "Media", "Extend", "Warn", "Error", "If", "AtIf", "AtFor",
                "AtElse", "AtWhile", "AtEach", "From", "To", "Through", "Only", "Not",
                "And", "Using", "As", "With", "Or", "In", "Default", "Important", "Lparen",
                "Rparen", "Lbrack", "Rbrack", "BlockStart", "BlockEnd", "Dot", "Comma",
                "Colon", "Semi", "Tilde", "Under", "Dollar", "At", "Amp", "Hash", "True",
                "False", "Plus", "Div", "Minus", "Times", "Eq", "NotEq", "Greater", "Less",
                "Includes", "DashMatch", "Pipe", "Cdo", "Cdc", "PseudoNot", "Calc", "Rotate",
                "Var", "Rgba", "Repeat", "PrefixMatch", "SuffixMatch", "SubstringMatch",
                "VendorPrefix", "Variable", "Number", "String_", "Ident"
        };
    }

    private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
    public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

    /**
     * @deprecated Use {@link #VOCABULARY} instead.
     */
    @Deprecated
    public static final String[] tokenNames;

    static {
        tokenNames = new String[_SYMBOLIC_NAMES.length];
        for (int i = 0; i < tokenNames.length; i++) {
            tokenNames[i] = VOCABULARY.getLiteralName(i);
            if (tokenNames[i] == null) {
                tokenNames[i] = VOCABULARY.getSymbolicName(i);
            }

            if (tokenNames[i] == null) {
                tokenNames[i] = "<INVALID>";
            }
        }
    }

    @Override
    @Deprecated
    public String[] getTokenNames() {
        return tokenNames;
    }

    @Override

    public Vocabulary getVocabulary() {
        return VOCABULARY;
    }

    @Override
    public String getGrammarFileName() {
        return "ScssParser.g4";
    }

    @Override
    public String[] getRuleNames() {
        return ruleNames;
    }

    @Override
    public String getSerializedATN() {
        return _serializedATN;
    }

    @Override
    public ATN getATN() {
        return _ATN;
    }

    public ScssParser(TokenStream input) {
        super(input);
        _interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
    }

    @SuppressWarnings("CheckReturnValue")
    public static class StylesheetContext extends ParserRuleContext {
        public TerminalNode EOF() {
            return getToken(ScssParser.EOF, 0);
        }

        public List<StatementContext> statement() {
            return getRuleContexts(StatementContext.class);
        }

        public StatementContext statement(int i) {
            return getRuleContext(StatementContext.class, i);
        }

        public StylesheetContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_stylesheet;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ScssParserListener) ((ScssParserListener) listener).enterStylesheet(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ScssParserListener) ((ScssParserListener) listener).exitStylesheet(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof ScssParserVisitor)
                return ((ScssParserVisitor<? extends T>) visitor).visitStylesheet(this);
            else return visitor.visitChildren(this);
        }
    }

    public final StylesheetContext stylesheet() throws RecognitionException {
        StylesheetContext _localctx = new StylesheetContext(_ctx, getState());
        enterRule(_localctx, 0, RULE_stylesheet);
        int _la;
        try {
            enterOuterAlt(_localctx, 1);
            {
                setState(197);
                _errHandler.sync(this);
                _la = _input.LA(1);
                while ((((_la) & ~0x3f) == 0 && ((1L << _la) & -788129404429025264L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 1543652563L) != 0)) {
                    {
                        {
                            setState(194);
                            statement();
                        }
                    }
                    setState(199);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                }
                setState(200);
                match(EOF);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class StatementContext extends ParserRuleContext {
        public ImportDeclarationContext importDeclaration() {
            return getRuleContext(ImportDeclarationContext.class, 0);
        }

        public VariableDeclarationContext variableDeclaration() {
            return getRuleContext(VariableDeclarationContext.class, 0);
        }

        public PropertyDeclarationContext propertyDeclaration() {
            return getRuleContext(PropertyDeclarationContext.class, 0);
        }

        public InterpolationDeclarationContext interpolationDeclaration() {
            return getRuleContext(InterpolationDeclarationContext.class, 0);
        }

        public MediaDeclarationContext mediaDeclaration() {
            return getRuleContext(MediaDeclarationContext.class, 0);
        }

        public MixinDeclarationContext mixinDeclaration() {
            return getRuleContext(MixinDeclarationContext.class, 0);
        }

        public ContentDeclarationContext contentDeclaration() {
            return getRuleContext(ContentDeclarationContext.class, 0);
        }

        public FunctionDeclarationContext functionDeclaration() {
            return getRuleContext(FunctionDeclarationContext.class, 0);
        }

        public IfDeclarationContext ifDeclaration() {
            return getRuleContext(IfDeclarationContext.class, 0);
        }

        public ForDeclarationContext forDeclaration() {
            return getRuleContext(ForDeclarationContext.class, 0);
        }

        public WhileDeclarationContext whileDeclaration() {
            return getRuleContext(WhileDeclarationContext.class, 0);
        }

        public EachDeclarationContext eachDeclaration() {
            return getRuleContext(EachDeclarationContext.class, 0);
        }

        public FontFaceDeclarationContext fontFaceDeclaration() {
            return getRuleContext(FontFaceDeclarationContext.class, 0);
        }

        public KeyframesDeclarationContext keyframesDeclaration() {
            return getRuleContext(KeyframesDeclarationContext.class, 0);
        }

        public IncludeDeclarationContext includeDeclaration() {
            return getRuleContext(IncludeDeclarationContext.class, 0);
        }

        public ExtendDeclarationContext extendDeclaration() {
            return getRuleContext(ExtendDeclarationContext.class, 0);
        }

        public WarndingDeclarationContext warndingDeclaration() {
            return getRuleContext(WarndingDeclarationContext.class, 0);
        }

        public ErrorDeclarationContext errorDeclaration() {
            return getRuleContext(ErrorDeclarationContext.class, 0);
        }

        public RulesetContext ruleset() {
            return getRuleContext(RulesetContext.class, 0);
        }

        public AtStatementDeclarationContext atStatementDeclaration() {
            return getRuleContext(AtStatementDeclarationContext.class, 0);
        }

        public PercentageStatementContext percentageStatement() {
            return getRuleContext(PercentageStatementContext.class, 0);
        }

        public StatementContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_statement;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ScssParserListener) ((ScssParserListener) listener).enterStatement(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ScssParserListener) ((ScssParserListener) listener).exitStatement(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof ScssParserVisitor)
                return ((ScssParserVisitor<? extends T>) visitor).visitStatement(this);
            else return visitor.visitChildren(this);
        }
    }

    public final StatementContext statement() throws RecognitionException {
        StatementContext _localctx = new StatementContext(_ctx, getState());
        enterRule(_localctx, 2, RULE_statement);
        try {
            setState(223);
            _errHandler.sync(this);
            switch (getInterpreter().adaptivePredict(_input, 1, _ctx)) {
                case 1:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(202);
                    importDeclaration();
                }
                break;
                case 2:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(203);
                    variableDeclaration();
                }
                break;
                case 3:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(204);
                    propertyDeclaration();
                }
                break;
                case 4:
                    enterOuterAlt(_localctx, 4);
                {
                    setState(205);
                    interpolationDeclaration();
                }
                break;
                case 5:
                    enterOuterAlt(_localctx, 5);
                {
                    setState(206);
                    mediaDeclaration();
                }
                break;
                case 6:
                    enterOuterAlt(_localctx, 6);
                {
                    setState(207);
                    mixinDeclaration();
                }
                break;
                case 7:
                    enterOuterAlt(_localctx, 7);
                {
                    setState(208);
                    contentDeclaration();
                }
                break;
                case 8:
                    enterOuterAlt(_localctx, 8);
                {
                    setState(209);
                    functionDeclaration();
                }
                break;
                case 9:
                    enterOuterAlt(_localctx, 9);
                {
                    setState(210);
                    ifDeclaration();
                }
                break;
                case 10:
                    enterOuterAlt(_localctx, 10);
                {
                    setState(211);
                    forDeclaration();
                }
                break;
                case 11:
                    enterOuterAlt(_localctx, 11);
                {
                    setState(212);
                    whileDeclaration();
                }
                break;
                case 12:
                    enterOuterAlt(_localctx, 12);
                {
                    setState(213);
                    eachDeclaration();
                }
                break;
                case 13:
                    enterOuterAlt(_localctx, 13);
                {
                    setState(214);
                    fontFaceDeclaration();
                }
                break;
                case 14:
                    enterOuterAlt(_localctx, 14);
                {
                    setState(215);
                    keyframesDeclaration();
                }
                break;
                case 15:
                    enterOuterAlt(_localctx, 15);
                {
                    setState(216);
                    includeDeclaration();
                }
                break;
                case 16:
                    enterOuterAlt(_localctx, 16);
                {
                    setState(217);
                    extendDeclaration();
                }
                break;
                case 17:
                    enterOuterAlt(_localctx, 17);
                {
                    setState(218);
                    warndingDeclaration();
                }
                break;
                case 18:
                    enterOuterAlt(_localctx, 18);
                {
                    setState(219);
                    errorDeclaration();
                }
                break;
                case 19:
                    enterOuterAlt(_localctx, 19);
                {
                    setState(220);
                    ruleset();
                }
                break;
                case 20:
                    enterOuterAlt(_localctx, 20);
                {
                    setState(221);
                    atStatementDeclaration();
                }
                break;
                case 21:
                    enterOuterAlt(_localctx, 21);
                {
                    setState(222);
                    percentageStatement();
                }
                break;
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ImportDeclarationContext extends ParserRuleContext {
        public TerminalNode Import() {
            return getToken(ScssParser.Import, 0);
        }

        public ImportPathContext importPath() {
            return getRuleContext(ImportPathContext.class, 0);
        }

        public TerminalNode Semi() {
            return getToken(ScssParser.Semi, 0);
        }

        public TerminalNode Require() {
            return getToken(ScssParser.Require, 0);
        }

        public TerminalNode Use() {
            return getToken(ScssParser.Use, 0);
        }

        public AsClauseContext asClause() {
            return getRuleContext(AsClauseContext.class, 0);
        }

        public WithClauseContext withClause() {
            return getRuleContext(WithClauseContext.class, 0);
        }

        public TerminalNode Forward() {
            return getToken(ScssParser.Forward, 0);
        }

        public ImportDeclarationContext(ParserRuleContext parent, int invokingState) {
            super(parent, invokingState);
        }

        @Override
        public int getRuleIndex() {
            return RULE_importDeclaration;
        }

        @Override
        public void enterRule(ParseTreeListener listener) {
            if (listener instanceof ScssParserListener) ((ScssParserListener) listener).enterImportDeclaration(this);
        }

        @Override
        public void exitRule(ParseTreeListener listener) {
            if (listener instanceof ScssParserListener) ((ScssParserListener) listener).exitImportDeclaration(this);
        }

        @Override
        public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
            if (visitor instanceof ScssParserVisitor)
                return ((ScssParserVisitor<? extends T>) visitor).visitImportDeclaration(this);
            else return visitor.visitChildren(this);
        }
    }

    public final ImportDeclarationContext importDeclaration() throws RecognitionException {
        ImportDeclarationContext _localctx = new ImportDeclarationContext(_ctx, getState());
        enterRule(_localctx, 4, RULE_importDeclaration);
        int _la;
        try {
            setState(248);
            _errHandler.sync(this);
            switch (_input.LA(1)) {
                case Import:
                    enterOuterAlt(_localctx, 1);
                {
                    setState(225);
                    match(Import);
                    setState(226);
                    importPath();
                    setState(228);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (_la == Semi) {
                        {
                            setState(227);
                            match(Semi);
                        }
                    }

                }
                break;
                case Require:
                    enterOuterAlt(_localctx, 2);
                {
                    setState(230);
                    match(Require);
                    setState(231);
                    importPath();
                    setState(233);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (_la == Semi) {
                        {
                            setState(232);
                            match(Semi);
                        }
                    }

                }
                break;
                case Use:
                    enterOuterAlt(_localctx, 3);
                {
                    setState(235);
                    match(Use);
                    setState(236);
                    importPath();
                    setState(238);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (_la == As) {
                        {
                            setState(237);
                            asClause();
                        }
                    }

                    setState(241);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (_la == With) {
                        {
                            setState(240);
                            withClause();
                        }
                    }

                    setState(244);
                    _errHandler.sync(this);
                    _la = _input.LA(1);
                    if (_la == Semi) {
                        {
                            setState(243);
                            match(Semi);
                        }
                    }

                }
                break;
                case Forward:
                    enterOuterAlt(_localctx, 4);
                {
                    setState(246);
                    match(Forward);
                    setState(247);
                    importPath();
                }
                break;
                default:
                    throw new NoViableAltException(this);
            }
        } catch (RecognitionException re) {
            _localctx.exception = re;
            _errHandler.reportError(this, re);
            _errHandler.recover(this, re);
        } finally {
            exitRule();
        }
        return _localctx;
    }

    @SuppressWarnings("CheckReturnValue")
    public static class ImportPathContext extends ParserRuleContext {
        public UriContext uri() {
            return getRuleContext(UriContext.class, 0);
        }
